end front for how-to ui

--- a/AADSCourseProject/back/HowTo/HowTo.DataAccess/HowTo.DataAccess.csproj
+++ b/AADSCourseProject/back/HowTo/HowTo.DataAccess/HowTo.DataAccess.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Helpers" />
+      <Folder Include="Repositories" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\HowTo.Entities\HowTo.Entities.csproj" />
+    </ItemGroup>
+    
 </Project>
