--- a/AADSCourseProject/back/HowTo/HowTo.Entities/HowTo.Entities.csproj
+++ b/AADSCourseProject/back/HowTo/HowTo.Entities/HowTo.Entities.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Article" />
+      <Folder Include="Course" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <ProjectReference Include="..\Common\Common.csproj" />
+    </ItemGroup>
+
 </Project>
