--- a/AADSCourseProject/back/HowTo/HowTo/HowTo.csproj
+++ b/AADSCourseProject/back/HowTo/HowTo/HowTo.csproj
@@ -6,4 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\HowTo.DataAccess\HowTo.DataAccess.csproj" />
+    </ItemGroup>
 </Project>
