--- a/AADSCourseProject/front/how-to-ui/package.json
+++ b/AADSCourseProject/front/how-to-ui/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "corner-smoothing": "^0.1.3",
+    "interweave": "^13.1.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-emoji": "^2.0.2",
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-graceful-image": "^1.5.0",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
