Describe controllers, add configuration

--- a/AADSCourseProject/back/HowTo/HowTo.Entities/HowTo.Entities.csproj
+++ b/AADSCourseProject/back/HowTo/HowTo.Entities/HowTo.Entities.csproj
@@ -7,12 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Article" />
-      <Folder Include="Course" />
-    </ItemGroup>
-    
-    <ItemGroup>
-        <ProjectReference Include="..\Common\Common.csproj" />
+      <PackageReference Include="atisu.services.common" Version="12.1.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
