--- a/AADSCourseProject/back/HowTo/HowTo/appsettings.json
+++ b/AADSCourseProject/back/HowTo/HowTo/appsettings.json
@@ -1,9 +1,15 @@
 {
+  "AppSettings": {
+    "Port": 8000
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DbSettings": {
+    "ConnectionString": "Host=127.0.0.1;Port=2345;Database=db_main;Username=db_main_user;Password=TjWnZq4t7w!z%C*F-JaNdRgUkXp2s5u8"
+  }
 }
