--- a/AADSCourseProject/back/HowTo/HowTo/appsettings.json
+++ b/AADSCourseProject/back/HowTo/HowTo/appsettings.json
@@ -10,6 +10,10 @@
   },
   "AllowedHosts": "*",
   "DbSettings": {
-    "ConnectionString": "Host=127.0.0.1;Port=2345;Database=db_main;Username=db_main_user;Password=TjWnZq4t7w!z%C*F-JaNdRgUkXp2s5u8"
+    "ConnectionString": "Data Source=howto.db"
+  },
+
+  "FileSystemOptions": {
+    "RootPath": "/Users/gently/Temp/howto"
   }
 }
