--- a/AADSCourseProject/back/HowTo/HowTo/appsettings.json
+++ b/AADSCourseProject/back/HowTo/HowTo/appsettings.json
@@ -9,11 +9,12 @@
     }
   },
   "AllowedHosts": "*",
+  
   "DbSettings": {
-    "ConnectionString": "Data Source=howto.db"
+    "ConnectionString": "Data Source=/sqlite-db/howto.db"
   },
 
   "FileSystemOptions": {
-    "RootPath": "/Users/gently/Temp/howto"
+    "RootPath": "/howto-content"
   }
 }
