--- a/AADSCourseProject/back/HowTo/HowTo.Entities/HowTo.Entities.csproj
+++ b/AADSCourseProject/back/HowTo/HowTo.Entities/HowTo.Entities.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
       <PackageReference Include="atisu.services.common" Version="12.1.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="7.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
