--- a/AADSCourseProject/back/HowTo/HowTo/appsettings.Development.json
+++ b/AADSCourseProject/back/HowTo/HowTo/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "DbSettings": {
+    "ConnectionString": "Data Source=howto.db"
+  },
+  "FileSystemOptions": {
+    "RootPath": "/Users/gently/Temp/howto-content"
   }
 }
