--- a/AADSCourseProject/devops/dev/docker-compose.yml
+++ b/AADSCourseProject/devops/dev/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     image: nginx:1.21     
     volumes:              
       - /var/log/nginx:/var/log/nginx 
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ../front/how-to-ui/build/:/usr/share/nginx/html:ro 
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ../../front/how-to-ui/build/:/usr/share/nginx/html:ro 
     ports: 
       - "80:80"
     restart: always
