--- a/AADSCourseProject/devops/prod/nginx.conf
+++ b/AADSCourseProject/devops/prod/nginx.conf
@@ -16,7 +16,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name 45.132.18.97;
 
         include /etc/nginx/mime.types;
 
@@ -25,7 +25,7 @@ http {
             proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
             proxy_redirect off;
             proxy_buffering off;
-            proxy_set_header Host localhost;
+            proxy_set_header Host 45.132.18.97;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
