some course project adaptation

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ NeuralNetworks/.idea
 OOP/build
 AADSCourseProject/front/.DS_Store
 AADSCourseProject/front/.DS_Store
+AADSCourseProject/front/.DS_Store
