--- a/AADSCourseProject/back/HowTo/HowTo.DataAccess/HowTo.DataAccess.csproj
+++ b/AADSCourseProject/back/HowTo/HowTo.DataAccess/HowTo.DataAccess.csproj
@@ -10,6 +10,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
     </ItemGroup>
     
