--- a/OOP/.vscode/settings.json
+++ b/OOP/.vscode/settings.json
@@ -61,7 +61,8 @@
         "variant": "cpp",
         "vector": "cpp",
         "random": "cpp",
-        "numeric": "cpp"
+        "numeric": "cpp",
+        "__memory": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
