some fix look feacture.md

--- a/AADSCourseProject/devops/prod/nginx.conf
+++ b/AADSCourseProject/devops/prod/nginx.conf
@@ -18,6 +18,8 @@ http {
         listen 80;
         server_name 45.132.18.97;
 
+        client_max_body_size 10M;
+
         include /etc/nginx/mime.types;
 
         location ~^/gw/ {
