> add functional OperationResult > refactor some tests > add test CreateAllInteractiveAsync

--- a/AADSCourseProject/back/HowTo/HowTo.DataAccess/HowTo.DataAccess.csproj
+++ b/AADSCourseProject/back/HowTo/HowTo.DataAccess/HowTo.DataAccess.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\HowTo.Entities\HowTo.Entities.csproj" />
+        <ProjectReference Include="..\ATI.Services.Common.Extensions.OperationResult\ATI.Services.Common.Extensions.OperationResult.fsproj" />
     </ItemGroup>
 
     <ItemGroup>
