--- a/CourseProjects/e-books/.vscode/settings.json
+++ b/CourseProjects/e-books/.vscode/settings.json
@@ -62,7 +62,18 @@
         "vector": "cpp",
         "random": "cpp",
         "numeric": "cpp",
-        "__memory": "cpp"
+        "__memory": "cpp",
+        "map": "cpp",
+        "__tree": "cpp",
+        "any": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stack": "cpp",
+        "valarray": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
