--- a/OOP/part_2/lab_1/CMakeLists.txt
+++ b/OOP/part_2/lab_1/CMakeLists.txt
@@ -1,2 +1,17 @@
 project(1_lab)
-add_executable(1_lab main.cpp)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_PREFIX_PATH "/opt/homebrew/opt/qt@5/lib/cmake")
+
+find_package(Qt5 COMPONENTS Widgets REQUIRED)
+
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTORCC ON)
+
+add_executable(lab_1 main.cpp)
+
+target_link_libraries(lab_1 Qt5::Widgets)
+
+
