--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ NeuralNetworks/.idea
 OOP/build
 AADSCourseProject/front/.DS_Store
 AADSCourseProject/front/.DS_Store
+OOP/part_2/.vscode/c_cpp_properties.json
+OOP/part_2/.vscode/settings.json
