--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ AADSCourseProject/front/.DS_Store
 AADSCourseProject/front/.DS_Store
 OOP/part_2/.vscode/c_cpp_properties.json
 OOP/part_2/.vscode/settings.json
+OOP/part_2/lab_2/my_db.sqlite
+OOP/part_2/build
