--- a/CourseProjects/EBooks/EBooks/appsettings.json
+++ b/CourseProjects/EBooks/EBooks/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "FileSystemOptions": {
+    "RootPath": "./e-books-content"
+  }
 }
