--- a/CourseProjects/e-books-ui/package.json
+++ b/CourseProjects/e-books-ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "humps": "^2.0.1",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
