--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ OOP/part_2/build
 teorver/.idea
 .idea
 SoftwareEngineering/lab2/bus_schedule.json
+operating_system/lab2/.vscode/settings.json
+SoftwareEngineering/lab3/example_db_backup
