--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ teorver/.idea
 SoftwareEngineering/lab2/bus_schedule.json
 operating_system/lab2/.vscode/settings.json
 SoftwareEngineering/lab3/example_db_backup
+
+pgdata
