исключения requirements.txt из игнорирования.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ OOP/part_2/lab_2/my_db.sqlite
 OOP/part_2/build
 
 *.txt
+!requirements.txt
 teorver/.idea
 .idea
 SoftwareEngineering/lab2/bus_schedule.json
